elimination & rr draws

--- a/TennisHistory/app/assets/css/main.css
+++ b/TennisHistory/app/assets/css/main.css
@@ -18,6 +18,19 @@ input::-webkit-inner-spin-button {
   --font-sans: "Jost", sans-serif;
   --font-cursive: "Homemade Apple", cursive;
   --container-8xl: 120rem;
+  --draw-width: "max-content";
+  --draw-heigth: 100%;
+  --main-vertical-padding: 20px;
+  --round-titles-vertical-padding: 8px;
+  --nav-button-padding: 4px;
+  --nav-buttons-top-distance: 50%;
+  --connection-lines-width: 2px;
+  --match-max-width: 1000px;
+  --match-min-vertical-gap: 25px;
+  --match-hor-margin: 20px;
+  --match-axis-margin: 4px;
+  --one-side-players-gap: 2px;
+  --distance-between-score-pairs: 14px;
 }
 
 :root {
@@ -35,8 +48,8 @@ input::-webkit-inner-spin-button {
   @apply bg-linear-to-r bg-bottom bg-[length:0_1px] bg-no-repeat transition-[background-size] hover:bg-[length:100%_1px] w-fit duration-500 cursor-pointer;
 }
 
-.hover-link {
-  @apply bg-linear-to-r bg-bottom bg-[length:0_1px] bg-no-repeat transition-[background-size] hover:bg-[length:100%_1px] w-fit duration-500 cursor-pointer;
+.highlight-link {
+  @apply text-highlighted from-(--ui-text-highlighted) to-(--ui-text-highlighted);
 }
 
 .default-link {
